--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<center><h1>end.rip WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO</h1></center>
-<center><h2>BROKE OWNS END EZZZZZZ SPADE DEMOTED TO NIGGER</h2></center>
-<center><h3>both kyrie's are coons wannabe 1337 hax</h3></center>
-<center><h3>chain is nigger</h3></center>
-<center><h3>yzn and cam inactive as FUCK</h3></center>
-<center><h3>haunt too busy for BALLIN SZN!!!!1!!</h3></center>
-<br>
-<center><h3>66 cool coder man - broke</h3></center>
-
+<center><h1>nigger</h1></center>
